; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_repository.c_resolved_parent_path.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_repository.c_resolved_parent_path.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GIT_ERROR_INVALID = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [23 x i8] c"invalid item directory\00", align 1
@GIT_REPOSITORY_ITEM__LAST = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32*, i32, i32)* @resolved_parent_path to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @resolved_parent_path(i32* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %9 = load i32, i32* %6, align 4
  switch i32 %9, label %19 [
    i32 129, label %10
    i32 128, label %13
    i32 130, label %16
  ]

10:                                               ; preds = %3
  %11 = load i32*, i32** %5, align 8
  %12 = call i8* @git_repository_path(i32* %11)
  store i8* %12, i8** %8, align 8
  br label %22

13:                                               ; preds = %3
  %14 = load i32*, i32** %5, align 8
  %15 = call i8* @git_repository_workdir(i32* %14)
  store i8* %15, i8** %8, align 8
  br label %22

16:                                               ; preds = %3
  %17 = load i32*, i32** %5, align 8
  %18 = call i8* @git_repository_commondir(i32* %17)
  store i8* %18, i8** %8, align 8
  br label %22

19:                                               ; preds = %3
  %20 = load i32, i32* @GIT_ERROR_INVALID, align 4
  %21 = call i32 @git_error_set(i32 %20, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0))
  store i8* null, i8** %4, align 8
  br label %36

22:                                               ; preds = %16, %13, %10
  %23 = load i8*, i8** %8, align 8
  %24 = icmp ne i8* %23, null
  br i1 %24, label %34, label %25

25:                                               ; preds = %22
  %26 = load i32, i32* %7, align 4
  %27 = load i32, i32* @GIT_REPOSITORY_ITEM__LAST, align 4
  %28 = icmp ne i32 %26, %27
  br i1 %28, label %29, label %34

29:                                               ; preds = %25
  %30 = load i32*, i32** %5, align 8
  %31 = load i32, i32* %7, align 4
  %32 = load i32, i32* @GIT_REPOSITORY_ITEM__LAST, align 4
  %33 = call i8* @resolved_parent_path(i32* %30, i32 %31, i32 %32)
  store i8* %33, i8** %4, align 8
  br label %36

34:                                               ; preds = %25, %22
  %35 = load i8*, i8** %8, align 8
  store i8* %35, i8** %4, align 8
  br label %36

36:                                               ; preds = %34, %29, %19
  %37 = load i8*, i8** %4, align 8
  ret i8* %37
}

declare dso_local i8* @git_repository_path(i32*) #1

declare dso_local i8* @git_repository_workdir(i32*) #1

declare dso_local i8* @git_repository_commondir(i32*) #1

declare dso_local i32 @git_error_set(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
